New Attempt to get the TFTP Server

--- a/sipXdigium/etc/digium/phone.properties
+++ b/sipXdigium/etc/digium/phone.properties
@@ -247,3 +247,5 @@ feature.directed-call-pickup.label=Directed Call Pickup
 feature.directed-call-pickup.description=Directed call pickup feature
 feature.call_pickup_code.label=Call Pickup Code
 feature.call_pickup_code.description=This is the dial prefix for call pickup
+feature.tftpserver.label=TFTP Server
+feature.tftpserver.description=Used to generate directory and smart BLF addresses.
